feat: forge_1_20_1 build skeleton (ForgeGradle 7.x + Java 17)
- build.gradle with ForgeGradle 7.x (same as forge_26_1_2)
- mods.toml, pack.mcmeta, PlatformSmokeTest.java
- Minimal CsgoBox.java stub for compile verification
- Replace Math.clamp() with Math.min/max in common/ (Java 17 compat)
- compileJava BUILD SUCCESSFUL